# wfp-lmr-capstone

./: .gitattributes  .gitignore  Dockerfile.frontend  QUICKSTART.md  README.md  docker-compose.local.yml  lmr_feature_dict.py
backend/: Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGE_SUMMARY_INFERENCE_INTEGRATION.md  COST_ESTIMATE.md  IMPL_WARD_TOOLTIPS.md  INGESTION_CONTAINER.md  LOCAL_OFFLINE.md  PLAN_INFERENCE_INTEGRATION.md  PLAN_SAGEMAKER_PIPELINE.md  PLAN_WARD_TOOLTIPS.md  PREDICTION_COG_CONVERSION.md  PROGRESS_INFERENCE_INTEGRATION.md
feature_engineering/: marsabit_feature_pipeline.py  planetary_computer_downloader.py
frontend/: README.md  local-nginx.conf
infra/: DEPLOY.md  build_parquets.py  deploy-all.sh  local-bootstrap.sh  local-pipeline.sh  refresh-frontend-dates.sh  test-pipeline.sh  truncate_precision.sh
lmr-container/: Dockerfile  README.md  pyproject.toml
lmr-container/cloudformation/: eventbridge.yaml  fargate-serve.yaml  iam.yaml  main.yaml  s3.yaml
lmr-container/config/: datasets.yaml
lmr-container/scripts/: deploy.sh
lmr-container/src/lmr/: cli.py  config.py
lmr-container/src/lmr/common/: s3.py
lmr-container/src/lmr/infer/: predict.py
lmr-container/src/lmr/ingest/: cog.py  s3.py  stac_client.py  zonal.py
lmr-container/src/lmr/serve/: app.py  routes.py  s3.py
lmr-container/tests/: test_config.py  test_serve.py
pipeline/: README.md  preprocess.py  requirements.txt  sagemaker_pipelines_mlflow_updated.ipynb
prism/: README.md  layers.json  prism.json
sagemaker-pipeline/: README.md  inference.py  (+12 more)
(+54 files in other folders)
